# android-kvm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  apm.lock.yaml  apm.yml  flake.nix
.apm/instructions/: project-knowledge.instructions.md  security.instructions.md
.github/workflows/: cargo-update.yml
flake/: devshells.nix  formatters.nix  packages.nix
flake/actions/: cargo-update.nix
modules/: default.nix
modules/home/: android-kvm.nix
src/: android.rs  config.rs  edge.rs  host.rs  main.rs  runtime.rs  scrcpy.rs  scrcpy_control.rs
