[package]
name = "android-kvm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
input-capture = { git = "https://github.com/feschber/lan-mouse.git" }
input-event = { git = "https://github.com/feschber/lan-mouse.git" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
toml = "0.9.8"
